objects/Workpacket__c.object
<CustomObject>
    <fields>
        <fullName>A_O_Lead__c</fullName>
        <label>A&amp;O Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Andrew Speer</fullName>
                </value>
                <value>
                    <fullName>Brian Roote</fullName>
                </value>
                <value>
                    <fullName>Courtney Van Overberghe</fullName>
                </value>
                <value>
                    <fullName>Ian Smith</fullName>
                </value>
                <value>
                    <fullName>Jay Janovics</fullName>
                </value>
                <value>
                    <fullName>Joel Butler</fullName>
                </value>
                <value>
                    <fullName>Kimberly Wrenn</fullName>
                </value>
                <value>
                    <fullName>Nick Zarns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>CPS_Project_Number__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Delivery__c</fullName>
        <label>Actual Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreed_Delivery__c</fullName>
        <label>Agreed Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPS_Project_Manager_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPS Project Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Is_CPS_Project_Manager__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Workpackets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPS_Project_Manager__c</fullName>
        <label>CPS Project Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abhishek Yadav</fullName>
                </value>
                <value>
                    <fullName>Akhil Aggarwal</fullName>
                </value>
                <value>
                    <fullName>Amandeepti</fullName>
                </value>
                <value>
                    <fullName>Anmol Kaul Dembi</fullName>
                </value>
                <value>
                    <fullName>Brian Swords</fullName>
                </value>
                <value>
                    <fullName>Carmen Tillman</fullName>
                </value>
                <value>
                    <fullName>Cathy Agnew</fullName>
                </value>
                <value>
                    <fullName>Clay Ferrell</fullName>
                </value>
                <value>
                    <fullName>Daniel Adeline</fullName>
                </value>
                <value>
                    <fullName>Debbie Determan</fullName>
                </value>
                <value>
                    <fullName>Deede Fulton</fullName>
                </value>
                <value>
                    <fullName>Dimple</fullName>
                </value>
                <value>
                    <fullName>Ellie Mullins</fullName>
                </value>
                <value>
                    <fullName>Giampaolo Squadroni</fullName>
                </value>
                <value>
                    <fullName>Hernan De Armas</fullName>
                </value>
                <value>
                    <fullName>Jaishree Medepalli</fullName>
                </value>
                <value>
                    <fullName>Jamie Bullyan</fullName>
                </value>
                <value>
                    <fullName>Jayant Yadav</fullName>
                </value>
                <value>
                    <fullName>Jennifer Blamey</fullName>
                </value>
                <value>
                    <fullName>Jennifer Skavnak</fullName>
                </value>
                <value>
                    <fullName>Julia Endersby</fullName>
                </value>
                <value>
                    <fullName>Katie Ohland</fullName>
                </value>
                <value>
                    <fullName>Kerry Moechnig-Studer</fullName>
                </value>
                <value>
                    <fullName>Kim Havelund</fullName>
                </value>
                <value>
                    <fullName>Kylie Angell</fullName>
                </value>
                <value>
                    <fullName>Laura Ruttle</fullName>
                </value>
                <value>
                    <fullName>Lauren Kerns</fullName>
                </value>
                <value>
                    <fullName>Leanna Myers</fullName>
                </value>
                <value>
                    <fullName>Leila Zid</fullName>
                </value>
                <value>
                    <fullName>Lesley-Ann Jones</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPS_Project_Number__c</fullName>
        <label>CPS Project Number</label>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Workpackets</relationshipLabel>
        <relationshipName>Workpackets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CS_Final_Test_Date__c</fullName>
        <label>CS Final Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Final_Test_Name__c</fullName>
        <label>CS Final Test Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alison Hollamby</fullName>
                </value>
                <value>
                    <fullName>Bahareh (Berry) Soltani</fullName>
                </value>
                <value>
                    <fullName>Claire Fix</fullName>
                </value>
                <value>
                    <fullName>Darya Mishyna</fullName>
                </value>
                <value>
                    <fullName>Emma Lee</fullName>
                </value>
                <value>
                    <fullName>Ena Sawhney</fullName>
                </value>
                <value>
                    <fullName>Hannah Ablitt</fullName>
                </value>
                <value>
                    <fullName>Helen Gordon</fullName>
                </value>
                <value>
                    <fullName>Kylie Angell</fullName>
                </value>
                <value>
                    <fullName>Lucy Gordon</fullName>
                </value>
                <value>
                    <fullName>Michael Sweeney</fullName>
                </value>
                <value>
                    <fullName>Olivia Smith</fullName>
                </value>
                <value>
                    <fullName>Pauline Campbell</fullName>
                </value>
                <value>
                    <fullName>Rosie Gibbs</fullName>
                </value>
                <value>
                    <fullName>Sarah Giordano</fullName>
                </value>
                <value>
                    <fullName>Sian Hughes</fullName>
                </value>
                <value>
                    <fullName>Temi Duro-Emmanuel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CS_Lead__c</fullName>
        <label>I/O Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alison Hollamby</fullName>
                </value>
                <value>
                    <fullName>Anthony Spencer</fullName>
                </value>
                <value>
                    <fullName>Chloe Gabriel</fullName>
                </value>
                <value>
                    <fullName>Daniel Adeline</fullName>
                </value>
                <value>
                    <fullName>Elizabeth Antoniou</fullName>
                </value>
                <value>
                    <fullName>Ellie Mullins</fullName>
                </value>
                <value>
                    <fullName>Harpreet Dhami</fullName>
                </value>
                <value>
                    <fullName>Krutika Peres da Silva</fullName>
                </value>
                <value>
                    <fullName>Laura Ruttle</fullName>
                </value>
                <value>
                    <fullName>Leila Zid</fullName>
                </value>
                <value>
                    <fullName>Louis Lu</fullName>
                </value>
                <value>
                    <fullName>Matthew Rogers</fullName>
                </value>
                <value>
                    <fullName>Michael Lippstreu</fullName>
                </value>
                <value>
                    <fullName>Rachelle Visser</fullName>
                </value>
                <value>
                    <fullName>Sharmistha Banerjee</fullName>
                </value>
                <value>
                    <fullName>Tunrea Khaira</fullName>
                </value>
                <value>
                    <fullName>Udita Chaudhary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>CPS_Project_Number__r.Client_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DTO_Publish__c</fullName>
        <label>DTO Publish</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTO_Sign_off__c</fullName>
        <label>DTO Sign off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Variance_Comment__c</fullName>
        <label>Delivery Variance Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extract_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extract Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Workpackets</relationshipLabel>
        <relationshipName>Workpackets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Sign_Off_Date__c</fullName>
        <label>Field Sign Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Sign_Off_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Sign Off Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workpackets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handover_to_QA_Date__c</fullName>
        <label>Handover to QA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handover_to_QA_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Handover to QA From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workpackets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>I_O_Lead_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>I/O Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Is_I_O_Lead__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Workpackets4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integration_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Integration Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Name</field>
                <operation>contains</operation>
                <value>(Alliance)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Workpackets (Integration Partner)</relationshipLabel>
        <relationshipName>Workpackets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBU__c</fullName>
        <formula>CPS_Project_Number__r.LBU_CPS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Publish__c</fullName>
        <label>Live Publish</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Localisation_Lead_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Localisation Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Is_Localisation_Lead__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Workpackets6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MIT_Lead__c</fullName>
        <label>Localisation Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Avril Peryer</fullName>
                </value>
                <value>
                    <fullName>Fei Liu</fullName>
                </value>
                <value>
                    <fullName>Lucy Burgess</fullName>
                </value>
                <value>
                    <fullName>Paige Jenkins</fullName>
                </value>
                <value>
                    <fullName>Samantha Lonigro</fullName>
                </value>
                <value>
                    <fullName>Tomasz Raczka</fullName>
                </value>
                <value>
                    <fullName>William Pearce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_integration_projects__c</fullName>
        <label>Number of integration projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>CPS_Project_Number__r.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Project_Name__c</fullName>
        <formula>CPS_Project_Number__r.PS_Project_Number__r.Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PS Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Project_Number__c</fullName>
        <formula>CPS_Project_Number__r.PS_Project_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PS Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_PS__c</fullName>
        <label>Product/PS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Support</fullName>
                </value>
                <value>
                    <fullName>PS Revenue</fullName>
                </value>
                <value>
                    <fullName>FOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Final_Test_Date__c</fullName>
        <label>QA Final Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Final_Test_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Final Test Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workpackets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reasons_For_Changed_Delivery_Date__c</fullName>
        <label>Reasons For Changed Delivery Date</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <label>Solution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>360</fullName>
                </value>
                <value>
                    <fullName>Advisory Services</fullName>
                </value>
                <value>
                    <fullName>APTA</fullName>
                </value>
                <value>
                    <fullName>Aspiring Minds</fullName>
                </value>
                <value>
                    <fullName>BOS / Validation</fullName>
                </value>
                <value>
                    <fullName>Branding</fullName>
                </value>
                <value>
                    <fullName>Configurable Grad SJT</fullName>
                </value>
                <value>
                    <fullName>Custom Assessment</fullName>
                </value>
                <value>
                    <fullName>Custom Norm</fullName>
                </value>
                <value>
                    <fullName>Custom Report - Complex</fullName>
                </value>
                <value>
                    <fullName>Custom Report - TCR</fullName>
                </value>
                <value>
                    <fullName>Custom Scale</fullName>
                </value>
                <value>
                    <fullName>Data Extract</fullName>
                </value>
                <value>
                    <fullName>DPN Changes</fullName>
                </value>
                <value>
                    <fullName>Group Report</fullName>
                </value>
                <value>
                    <fullName>Integration – Production Additional Stream(s)</fullName>
                </value>
                <value>
                    <fullName>Integration - Production Build</fullName>
                </value>
                <value>
                    <fullName>Integration – UAT Additional Stream(s)</fullName>
                </value>
                <value>
                    <fullName>Integration - UAT Build</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>JFA</fullName>
                </value>
                <value>
                    <fullName>Localisation</fullName>
                </value>
                <value>
                    <fullName>MCP</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>Multimedia – Other</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Precise Fit</fullName>
                </value>
                <value>
                    <fullName>RJP Multimedia</fullName>
                </value>
                <value>
                    <fullName>RJP Text</fullName>
                </value>
                <value>
                    <fullName>Security Monitoring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Executing</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Closed/Delivered</fullName>
                </value>
                <value>
                    <fullName>Closed/Cancelled</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Final_Test_Date__c</fullName>
        <label>Technology Final Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technology_Final_Test_Name__c</fullName>
        <label>Technology Final Test Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ahsin Niazi</fullName>
                </value>
                <value>
                    <fullName>Aidan Pugh</fullName>
                </value>
                <value>
                    <fullName>Cosy Quarters</fullName>
                </value>
                <value>
                    <fullName>Edward Butler</fullName>
                </value>
                <value>
                    <fullName>Gemma Townsend</fullName>
                </value>
                <value>
                    <fullName>Inna Hodges</fullName>
                </value>
                <value>
                    <fullName>Jason Pilbrow</fullName>
                </value>
                <value>
                    <fullName>John Daniel</fullName>
                </value>
                <value>
                    <fullName>John Duncan</fullName>
                </value>
                <value>
                    <fullName>Kamil Stanczuk</fullName>
                </value>
                <value>
                    <fullName>Maria Tafaro</fullName>
                </value>
                <value>
                    <fullName>Naushil Sures</fullName>
                </value>
                <value>
                    <fullName>Pavenjit Sodhi</fullName>
                </value>
                <value>
                    <fullName>Ravi Prajapati</fullName>
                </value>
                <value>
                    <fullName>Robert Prehn</fullName>
                </value>
                <value>
                    <fullName>Robert Watts</fullName>
                </value>
                <value>
                    <fullName>Usman Khan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Lead_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technology Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Is_Technology_Lead__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Workpackets5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technology_Lead__c</fullName>
        <label>Technology Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aaron Porter</fullName>
                </value>
                <value>
                    <fullName>Adam Du-Lieu</fullName>
                </value>
                <value>
                    <fullName>Agam Bhardwaj</fullName>
                </value>
                <value>
                    <fullName>Agris Fridvalds</fullName>
                </value>
                <value>
                    <fullName>Ahsin Niazi</fullName>
                </value>
                <value>
                    <fullName>Aidan Pugh</fullName>
                </value>
                <value>
                    <fullName>Aimee Goldschmidt</fullName>
                </value>
                <value>
                    <fullName>Ashley Caskey</fullName>
                </value>
                <value>
                    <fullName>Camilla Perera</fullName>
                </value>
                <value>
                    <fullName>Conor Comerford</fullName>
                </value>
                <value>
                    <fullName>Cosy Quarters</fullName>
                </value>
                <value>
                    <fullName>Dan Lund</fullName>
                </value>
                <value>
                    <fullName>David Egerton-Smith</fullName>
                </value>
                <value>
                    <fullName>Dean Easton</fullName>
                </value>
                <value>
                    <fullName>Dragan Dragas</fullName>
                </value>
                <value>
                    <fullName>Edward Butler</fullName>
                </value>
                <value>
                    <fullName>Edward Ford</fullName>
                </value>
                <value>
                    <fullName>Gavin Grover</fullName>
                </value>
                <value>
                    <fullName>Gemma Townsend</fullName>
                </value>
                <value>
                    <fullName>George Tsiatsis</fullName>
                </value>
                <value>
                    <fullName>Hernan De Armas</fullName>
                </value>
                <value>
                    <fullName>Jason Pilbrow</fullName>
                </value>
                <value>
                    <fullName>John Daniel</fullName>
                </value>
                <value>
                    <fullName>John Duncan</fullName>
                </value>
                <value>
                    <fullName>Jolene Meyer</fullName>
                </value>
                <value>
                    <fullName>Kamil Stanczuk</fullName>
                </value>
                <value>
                    <fullName>Kimberly Havelund</fullName>
                </value>
                <value>
                    <fullName>Kim Havelund</fullName>
                </value>
                <value>
                    <fullName>Leanna Myers</fullName>
                </value>
                <value>
                    <fullName>Louis Lu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Changes_found_QA_Test__c</fullName>
        <label>Total Changes found - QA Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Defects_found_QA_Test__c</fullName>
        <label>Total Defects found - QA Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Track_History_For_Changed_Delivery_Date__c</fullName>
        <label>Track History For Changed Delivery Date</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Track_History_for_Delivery_Variance_Comm__c</fullName>
        <label>Track History for Delivery Variance Comm</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Workpacket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>WP-{00000000}</displayFormat>
        <label>Workpacket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workpackets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ActualDeliveryIsMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNEW(),AND( ISPICKVAL( Status__c ,&apos;Closed/Delivered&apos;) ,ISBLANK( Actual_Delivery__c )),AND(ISCHANGED( Status__c),ISPICKVAL( Status__c ,&apos;Closed/Delivered&apos;),ISBLANK(Actual_Delivery__c )))</errorConditionFormula>
        <errorMessage>If status is Closed/Delivered then Actual Delivery must be filled in</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ActualdeliveryIsgreaterthanAgreeddeliver</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNEW(),
   AND
   ( Agreed_Delivery__c  &lt;  Actual_Delivery__c  ,
     ISBLANK(  Delivery_Variance_Comment__c  )
	), 
      AND(
	      OR(
		      ISCHANGED(Agreed_Delivery__c),ISCHANGED(Actual_Delivery__c )
			  ),
			  ( Agreed_Delivery__c  &lt;  Actual_Delivery__c ),
			  ISBLANK( Delivery_Variance_Comment__c )
		)
	)</errorConditionFormula>
        <errorMessage>If actual delivery date is greater than agreed delivery date then “Delivery Variance Comments” is compulsory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handover_to_QA_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(  Handover_to_QA_Date__c )),  ISBLANK(  Handover_to_QA_Name__c))</errorConditionFormula>
        <errorDisplayField>Handover_to_QA_Name__c</errorDisplayField>
        <errorMessage>Please provide the name of the person who the QA handover has come from</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HandoversAndQAareMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
		ISPICKVAL( Status__c ,&apos;Closed/Delivered&apos;) ,
		OR(
			ISPICKVAL( Solution_Type__c ,&apos;Custom Report Type 1&apos;),
			ISPICKVAL( Solution_Type__c ,&apos;Custom Report Type 2&apos;),
			ISPICKVAL( Solution_Type__c ,&apos;Custom Report Type 3&apos;),
			ISPICKVAL( Solution_Type__c ,&apos;Custom Report Bespoke&apos;),
			ISPICKVAL( Solution_Type__c ,&apos;SJT Multimedia&apos;),
			ISPICKVAL( Solution_Type__c ,&apos;SJT Text Type 1&apos;),
			ISPICKVAL( Solution_Type__c ,&apos;SJT Text Type 2&apos;),
ISPICKVAL( Solution_Type__c ,&apos;S2P Instrument&apos;),
ISPICKVAL( Solution_Type__c ,&apos;S2P Integration (stub)&apos;)
		),	
			OR(
				ISBLANK( Handover_to_QA_Date__c ),
				ISBLANK( Handover_to_QA_Name__c ),
				ISBLANK( QA_Final_Test_Date__c ),
				ISBLANK( QA_Final_Test_Name__c)
			)
				
	)</errorConditionFormula>
        <errorMessage>Please complete the QA fields for this workpacket</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK( CPS_Project_Manager_New__c ),
ISBLANK( Technology_Lead_New__c),ISBLANK( I_O_Lead_New__c),
ISBLANK( Localisation_Lead_New__c)
,NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;))
)</errorConditionFormula>
        <errorMessage>Must be a name in one of these (CPS Project Manager, CS Lead, Tech Lead, A&amp;O Lead, MIT Lead)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QA_Final_Test_Name_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(   QA_Final_Test_Date__c )),  ISBLANK(   QA_Final_Test_Name__c ))</errorConditionFormula>
        <errorDisplayField>QA_Final_Test_Name__c</errorDisplayField>
        <errorMessage>Please provide the name of the person who completed the final testing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReasonsForReasonsForChangedtMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED( Agreed_Delivery__c ),  ISBLANK( Reasons_For_Changed_Delivery_Date__c) )</errorConditionFormula>
        <errorMessage>Reasons For Changed Delivery Date is Mandatory If Agreed Delivery Date is changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Workpacket_Status_Move</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  NOT($Permission.CPS_Workpacket_closed_delivered_edit_rights), 
AND( 
ISPICKVAL(PRIORVALUE(Status__c),&quot;closed/delivered&quot;), 
OR( 
ISPICKVAL( Status__c,&quot;Planning&quot;), 
ISPICKVAL( Status__c,&quot;Executing&quot;), 
ISPICKVAL( Status__c,&quot;Closing&quot;), 
ISPICKVAL( Status__c,&quot;Closed/Cancelled&quot;), 
ISPICKVAL( Status__c,&quot;On Hold&quot;), 
ISPICKVAL( Status__c,&quot;closed/delivered&quot;) 
)	
) 
)</errorConditionFormula>
        <errorMessage>You do not have permissions to edit Closed/Delivered Workpackets.</errorMessage>
    </validationRules>
</CustomObject>